Wed Mar 18 12:10:51 GMT 2009    Tom Mortimer <tom@lemurconsulting.com>

    * flaxclient.php:  Modified to work with flax_search_service
    * _restclient.php: Fixed URL error. Throws exception for network problems.
    * unittests/_restclient.php, unittests/_testrestclient.php: Renamed to 
      avoid require() clash.
    * unittests/test_database.php: Modifed to work with flax_search_service.
    * unittests/test_fields.php: Changed DB name.

Tue Mar 17 17:48:52 GMT 2009    Tom Mortimer <tom@lemurconsulting.com>

    * flaxclient.php, unittests/_restclient.php: changed /fields/ url  
      to /schema/fields/

Mon Mar 16 14:13:38 GMT 2009    Tom Mortimer <tom@lemurconsulting.com>

    * flaxclient.php: Changed paths to use '/db/' prefix.
    * unittests/_restclient.php: Rewritten using regexps.
    * unittests/test_fields/php: Tidied.

Mon Mar 16 10:02:52 GMT 2009    Tom Mortimer <tom@lemurconsulting.com>

    * flaxclient.php, unittests/_restclient.php, unittests/test_fields.php: 
      Added delete field method.

Fri Mar 13 15:48:37 GMT 2009    Tom Mortimer <tom@lemurconsulting.com>

    * Added some basic functionality and tests for database fields.

Fri Mar 13 12:13:31 GMT 2009    Tom Mortimer <tom@lemurconsulting.com>

    * flaxclient.php, unittests/_restclient.php, unittests/test_database.php:
      Moved delete() into database object and changed tests accordingly.